base/src/test/resources/failure/scope/re-prim.aya.txt
In file $FILE:2:5 ->

  1 | prim I
  2 | prim I
           ^^

Error: Redefinition of primitive `I`

Resolving interrupted due to:
1 error(s), 0 warning(s).
What are you doing?
